# napari-segassist

./: LICENSE  README.md  setup.cfg  tox.ini
src/napari_segassist/: napari.yaml
src/napari_segassist/_tests/: test_reader.py  test_sample_data.py  test_widget.py  test_writer.py
